# eindwerk

./: .gitignore  .gitmodules  Graduaatsproef.md  docker-compose.yml  readme.md  requirements.txt
CTest_example_data/: CMakeLists.txt  reportportal_uploader.py
CTest_example_data/tests/: test_main.cpp
elasticstack/: docker-compose.yml
elasticstack/pytest/: Dockerfile  elastic_test.py  requirements.txt
grafana/dashboards/: OBS_All-Dashboard.json  obs-dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
playbooks/: deploy_reportportal.yml
prometheus/: prometheus.yml
pytest_example_data/: Dockerfile  agent.yaml  build.sh  pytest.ini  requirements.txt
pytest_example_data/example_tests/: conftest.py  first_example_test.py  pxl_demo_test.py  pxl_performance_test.py  second_test.py
pytest_example_data/exmaple_tests/: first_example_test.py  second_test.py
pytest_exporter/: Dockerfile  exporter.py  requirements.txt
reportportal/: docker-compose.yml  setup.py
reportportal/provisioning/: docker-compose.yml
reportportal/provisioning/dashboards/filters/: ctest_filter.json  demo_filter.json  python_unit_test_filter.json
reportportal/provisioning/dashboards/widgets/: add_to_dashboard.json  add_to_dashboard2.json  launch_statistics.json  time_consumption.json
reportportal/provisioning/scripts/: API.sh
reportportal/provisioning/users/: qcify_user.json
